--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -3,6 +3,8 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!-- Test -->
+<!-- Test2 -->
 <head>
 {% include 'limespot-global-head-includes' %}
   <meta charset="utf-8" />
@@ -478,19 +480,19 @@ a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 
 <!--<script> 
 if (typeof(ju_options) !== 'object'){
-    var ju_options = {"targeting":{"subtotal":0},"personalized":{"shipping_threshold":0}};
+	var ju_options = {"targeting":{"subtotal":0},"personalized":{"shipping_threshold":0}};
 } else {
-    if (ju_options.hasOwnProperty("targeting")) {
-        ju_options.targeting.subtotal=0;
-        ju_options.personalized.shipping_threshold=0;
-    } else {
-        ju_options.targeting = {"subtotal":0};
-        ju_options.personalized = {"shipping_threshold":0};
-    }
+	if (ju_options.hasOwnProperty("targeting")) {
+		ju_options.targeting.subtotal=0;
+		ju_options.personalized.shipping_threshold=0;
+	} else {
+		ju_options.targeting = {"subtotal":0};
+		ju_options.personalized = {"shipping_threshold":0};
+	}
 }
 
 $(document).ready(function(){ 
-    cs_check_auto_subtotal(); 
+	cs_check_auto_subtotal(); 
 });
 
 var cs_custom_subtotal_check;
@@ -498,74 +500,74 @@ var cs_giftcardadded = false;
 var cs_giftcardremoved = false;
 
 function cs_setCookie( name, value, days, path, domain, secure ){ 
-    // set time, it's in milliseconds 
-    var today = new Date(); 
-    today.setTime(today.getTime()+(days*24*60*60*1000)); 
-    expires = "; expires="+today.toGMTString(); 
-    document.cookie = name + "=" +escape( value ) + 
-    ";expires=" + today.toGMTString() + 
-    ( ( path ) ? ";path=" + path : "" ) + 
-    ( ( domain ) ? ";domain=" + domain : "" ) + 
-    ( ( secure ) ? ";secure" : "" ); 
+	// set time, it's in milliseconds 
+	var today = new Date(); 
+	today.setTime(today.getTime()+(days*24*60*60*1000)); 
+	expires = "; expires="+today.toGMTString(); 
+	document.cookie = name + "=" +escape( value ) + 
+	";expires=" + today.toGMTString() + 
+	( ( path ) ? ";path=" + path : "" ) + 
+	( ( domain ) ? ";domain=" + domain : "" ) + 
+	( ( secure ) ? ";secure" : "" ); 
 }
 
 function cs_getCookie(c_name){ 
-    var i,x,y,ARRcookies=document.cookie.split(";"); 
-    for (i=0;i<ARRcookies.length;i++) 
-    { 
-    x=ARRcookies[i].substr(0,ARRcookies[i].indexOf("=")); 
-    y=ARRcookies[i].substr(ARRcookies[i].indexOf("=")+1); 
-    x=x.replace(/^\s+|\s+$/g,""); 
-    if (x==c_name) { 
-    return unescape(y); 
-    } 
-    } 
+	var i,x,y,ARRcookies=document.cookie.split(";"); 
+	for (i=0;i<ARRcookies.length;i++) 
+	{ 
+	x=ARRcookies[i].substr(0,ARRcookies[i].indexOf("=")); 
+	y=ARRcookies[i].substr(ARRcookies[i].indexOf("=")+1); 
+	x=x.replace(/^\s+|\s+$/g,""); 
+	if (x==c_name) { 
+	return unescape(y); 
+	} 
+	} 
 }
 
 function cs_check_auto_subtotal(){ 
-    cs_custom_subtotal_check = setInterval(cs_check_auto_subtotal_interval,1000); 
+	cs_custom_subtotal_check = setInterval(cs_check_auto_subtotal_interval,1000); 
 }
 
 function cs_check_auto_subtotal_interval(){ 
-    var subtotal = 0.00;
-    var giftcardexists = -1;
-    if ($('#basket-right h4').length || $('#cart_popup').is(':visible')){
-        if (typeof(cs_getCookie) !== 'undefined' && typeof(cs_getCookie) === 'function') { 
-            if ($('#basket-right h4').length){
-                subtotal = parseFloat($('#basket-right h4').text().replace(/[^\d.-]/g, ''));
-                $('.cart-item').each(function(index){
-                    giftcardexists = ($(this).find('.cart-title').text().indexOf('Gift Card')>-1 ? index : giftcardexists);
-                })
-                if (giftcardexists>-1 && subtotal<150 && !cs_giftcardremoved){
-                    cs_giftcardremoved = true;
-                    $('.cart-item:eq('+giftcardexists+')').closest('tr').remove();
-                    $.get('/cart/change?line='+(giftcardexists+1)+'&quantity=0');
-                    //document.location = '/cart/change?line='+(giftcardexists+1)+'&quantity=0';
-                }
-            } else if ($('#cart_popup').is(':visible')){
-                $('#cart_popup .quick-cart-item').each(function(){
-                    subtotal += parseFloat($(this).find('div:eq(4)').text().replace(/[^\d.-]/g, ''));
-                    giftcardexists = ($(this).find('div:eq(1) a').text().indexOf('Gift Card')>-1 ? 0 : giftcardexists);
-                })
-            }
-            cs_setCookie("ju_cs_subtotal", subtotal,1, '/', '', ''); 
-            ju_options.targeting.subtotal=subtotal;
-            ju_options.personalized.shipping_threshold=(150-subtotal).toFixed(2);
-            if (subtotal>=150 && giftcardexists==-1 && !cs_giftcardadded){
-                cs_giftcardadded = true;
-                $.post('/cart/add.js',{"id":27442734089,"quantity":1});
-            }
-            //console.log(giftcardexists)
-        } 
-    }
-    subtotal = cs_getCookie("ju_cs_subtotal");
-    if (subtotal===undefined && subtotal!=''){
-        subtotal=0;
-    } else {
-        subtotal = parseFloat(subtotal);
-    }
-    ju_options.targeting.subtotal=subtotal;
-    ju_options.personalized.shipping_threshold=(150-subtotal).toFixed(2);
+	var subtotal = 0.00;
+	var giftcardexists = -1;
+	if ($('#basket-right h4').length || $('#cart_popup').is(':visible')){
+		if (typeof(cs_getCookie) !== 'undefined' && typeof(cs_getCookie) === 'function') { 
+			if ($('#basket-right h4').length){
+				subtotal = parseFloat($('#basket-right h4').text().replace(/[^\d.-]/g, ''));
+				$('.cart-item').each(function(index){
+					giftcardexists = ($(this).find('.cart-title').text().indexOf('Gift Card')>-1 ? index : giftcardexists);
+				})
+				if (giftcardexists>-1 && subtotal<1 && !cs_giftcardremoved){
+					cs_giftcardremoved = true;
+					$('.cart-item:eq('+giftcardexists+')').closest('tr').remove();
+					$.get('/cart/change?line='+(giftcardexists+1)+'&quantity=0');
+					//document.location = '/cart/change?line='+(giftcardexists+1)+'&quantity=0';
+				}
+			} else if ($('#cart_popup').is(':visible')){
+				$('#cart_popup .quick-cart-item').each(function(){
+					subtotal += parseFloat($(this).find('div:eq(4)').text().replace(/[^\d.-]/g, ''));
+					giftcardexists = ($(this).find('div:eq(1) a').text().indexOf('Gift Card')>-1 ? 0 : giftcardexists);
+				})
+			}
+			cs_setCookie("ju_cs_subtotal", subtotal,1, '/', '', ''); 
+			ju_options.targeting.subtotal=subtotal;
+			ju_options.personalized.shipping_threshold=(150-subtotal).toFixed(2);
+			if (subtotal>=1 && giftcardexists==-1 && !cs_giftcardadded){
+				cs_giftcardadded = true;
+				$.post('/cart/add.js',{"id":27977803977,"quantity":1});
+			}
+			//console.log(giftcardexists)
+		} 
+	}
+	subtotal = cs_getCookie("ju_cs_subtotal");
+	if (subtotal===undefined && subtotal!=''){
+		subtotal=0;
+	} else {
+		subtotal = parseFloat(subtotal);
+	}
+	ju_options.targeting.subtotal=subtotal;
+	ju_options.personalized.shipping_threshold=(150-subtotal).toFixed(2);
 }
 </script>-->
 <link href="https://limespot.azureedge.net/storefront/2.0.0/css/recommendations.min.css" rel="stylesheet" />
