updated theme on feb 23, 2017

--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -129,3 +129,7 @@ input.bold_option_child {
 #cart_popup .quick-cart-item:nth-child(1) {
 	display: block !important;
 }
+
+.black-background {
+  background: #000000;
+}
