--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -51,6 +51,7 @@
     {{ tracking_code }}
   <link href="https://limespot.azureedge.net/storefront/2.0.0/css/recommendations.min.css" rel="stylesheet" />
 {% include 'limespot-custom-css' %}
+{% include "swell-checkout" %}
 </body>
 </html>
 <script data-cfasync="false">var ju_num="D90E6949-1F80-4E17-8413-0EE0E64671DA";var asset_host='//cdn.justuno.com/';(function() {var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=asset_host+'coupon_code1.js';var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);})();</script>
