--- a/layout/theme.full-screen-video.liquid
+++ b/layout/theme.full-screen-video.liquid
@@ -48,13 +48,6 @@
 
 
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  
-  {% assign custom = all_products.custom-set %}
-  {% assign custom_handle = 'custom-set' %}
-  <script type="text/javascript">
-    var customImage = "{{ custom | img_url: 'small' }}";
-    var customHandle = "{{ custom_handle }}";
-  </script>
 
   {{ 'theme.js' | asset_url | script_tag }} 
   {{ 'option_selection.js' | shopify_asset_url | script_tag }}  
@@ -143,12 +136,9 @@ a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 </script>  
 <!-- End Crazy Egg Script -->
   
-  
 <!-- Bing Tracking Code -->
 <script>(function(w,d,t,r,u){var f,n,i;w[u]=w[u]||[],f=function(){var o={ti:"5527824"};o.q=w[u],w[u]=new UET(o),w[u].push("pageLoad")},n=d.createElement(t),n.src=r,n.async=1,n.onload=n.onreadystatechange=function(){var s=this.readyState;s&&s!=="loaded"&&s!=="complete"||(f(),n.onload=n.onreadystatechange=null)},i=d.getElementsByTagName(t)[0],i.parentNode.insertBefore(n,i)})(window,document,"script","//bat.bing.com/bat.js","uetq");</script><noscript><img src="//bat.bing.com/action/0?ti=5527824&Ver=2" height="0" width="0" style="display:none; visibility: hidden;" /></noscript>
 <!-- End Bing Tracking Code -->
-  
-  
   
 </head>
 
@@ -177,7 +167,7 @@ a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
   </div>
 
   <div class="shifter-page">    
-    <div class="page-wrap">
+    <div class="page-wrap black-background">
       <header>
         <div id="top-bar">
           <div class="row">
@@ -273,17 +263,6 @@ a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
       </nav>	        
       <div class="clear"></div>
      
-<!-- PayPal Banner
-      <div class="desktop-4 tablet-3 mobile-3 center advertising">
-        <script type="text/javascript" data-pp-pubid="0e0447466c" data-pp-placementtype="468x60"> (function (d, t) {
-        "use strict";
-        var s = d.getElementsByTagName(t)[0], n = d.createElement(t);
-        n.src = "//paypal.adtag.where.com/merchant.js";
-        s.parentNode.insertBefore(n, s);
-        }(document, "script"));
-        </script>
-      </div>
--->
 
       {% if template == 'index' %}	
       {{ content_for_layout }}
@@ -300,85 +279,6 @@ a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 
     </div>  
 
-    <div id="newsletter">
-      <div class="row">
-        {% include 'mailing' %}
-      </div>
-    </div>  
-
-    <footer>
-
-      <div class="row">
-
-        <div class="desktop-3 tablet-fourth mobile-3">
-          <div class="section-title">
-            <h4>{{ 'layout.footer.section_1_title' | t }}</h4>
-          </div>        
-          <ul>
-            {% if settings.show-email %}<li><label>{{ 'layout.footer.email_label' | t }}</label>{{ settings.email }}</li>{% endif %}
-            {% if settings.show-phone %}<li><label>{{ 'layout.footer.phone_label' | t }}</label>{{ settings.phone }}</li>{% endif %}
-            {% if settings.show-address %}<li><label>{{ 'layout.footer.address_label' | t }}</label>{{ settings.address }}</li>{% endif %}
-          </ul>
-        </div>
-
-        <div class="desktop-3 tablet-fourth mobile-3">
-          <div class="section-title">
-            <h4>{{ 'layout.footer.section_2_title' | t }}</h4>
-          </div>
-          <ul>
-            {% for link in linklists.footer.links %}                
-            <li>{{ link.title | link_to: link.url }}</li>
-          </ul>
-          {% endfor %}
-        </div>
-        <div class="desktop-3 tablet-fourth mobile-3">
-          <div class="section-title">
-            <h4>{{ 'layout.footer.section_3_title' | t }}</h4>
-          </div>
-          <ul>
-          {% for link in linklists[settings.footer_2].links %}                
-          <li>{{ link.title | link_to: link.url }}</li>
-          {% endfor %}
-          </ul>
-        </div>
-        <div class="desktop-3 tablet-fourth mobile-3">
-          <div class="section-title">
-            <h4>{{ 'layout.footer.section_5_title' | t }}</h4>
-          </div>        
-          {% for type in shop.enabled_payment_types %}
-          <img src="{{ type | payment_type_img_url }}" />
-          {% endfor %}  
-
-          <div class="clear"></div>
-
-          <small>Copyright &copy; {{ 'now' | date: "%Y" }} {{ shop.name | link_to: '/' }}<br />
-            Powered by Shopify
-          </small>
-        </div>
-      </div> 
-
-    </footer>
-  </div>
-  <nav class="shifter-navigation">
-    <li class="search">
-      <form action="/search" method="get">
-        <input type="text" name="q" id="q" placeholder="{{ 'general.search.placeholder' | t }}" />
-      </form>           
-    </li>
-    {% for link in linklists.main-menu.links %}
-    <li>{{ link.title | link_to: link.url }}
-      {% capture child_list_handle %}{{ link.title | handleize }}{% endcapture %}
-      {% if linklists[child_list_handle] and linklists[child_list_handle].links.size > 0 %}
-      <ul class="sub">
-        {% for l in linklists[child_list_handle].links %}
-        <li><a href="{{ l.url }}">{{ l.title }}</a></li>          
-        {% endfor %}
-      </ul>
-      {% endif %}
-    </li>
-    {% endfor %}      
-  </nav>  
-  {% include 'popup' %}
   
   <script type="text/javascript">
     //initiating jQuery
@@ -491,103 +391,6 @@ a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 {% include 'easyvideo' %}
 {% include 'gts' %}
 
-<!--<script> 
-if (typeof(ju_options) !== 'object'){
-	var ju_options = {"targeting":{"subtotal":0},"personalized":{"shipping_threshold":0}};
-} else {
-	if (ju_options.hasOwnProperty("targeting")) {
-		ju_options.targeting.subtotal=0;
-		ju_options.personalized.shipping_threshold=0;
-	} else {
-		ju_options.targeting = {"subtotal":0};
-		ju_options.personalized = {"shipping_threshold":0};
-	}
-}
 
-$(document).ready(function(){ 
-	cs_check_auto_subtotal(); 
-});
-
-var cs_custom_subtotal_check;
-var cs_giftcardadded = false;
-var cs_giftcardremoved = false;
-
-function cs_setCookie( name, value, days, path, domain, secure ){ 
-	// set time, it's in milliseconds 
-	var today = new Date(); 
-	today.setTime(today.getTime()+(days*24*60*60*1000)); 
-	expires = "; expires="+today.toGMTString(); 
-	document.cookie = name + "=" +escape( value ) + 
-	";expires=" + today.toGMTString() + 
-	( ( path ) ? ";path=" + path : "" ) + 
-	( ( domain ) ? ";domain=" + domain : "" ) + 
-	( ( secure ) ? ";secure" : "" ); 
-}
-
-function cs_getCookie(c_name){ 
-	var i,x,y,ARRcookies=document.cookie.split(";"); 
-	for (i=0;i<ARRcookies.length;i++) 
-	{ 
-	x=ARRcookies[i].substr(0,ARRcookies[i].indexOf("=")); 
-	y=ARRcookies[i].substr(ARRcookies[i].indexOf("=")+1); 
-	x=x.replace(/^\s+|\s+$/g,""); 
-	if (x==c_name) { 
-	return unescape(y); 
-	} 
-	} 
-}
-
-function cs_check_auto_subtotal(){ 
-	cs_custom_subtotal_check = setInterval(cs_check_auto_subtotal_interval,1000); 
-}
-
-function cs_check_auto_subtotal_interval(){ 
-	var subtotal = 0.00;
-	var giftcardexists = -1;
-	if ($('#basket-right h4').length || $('#cart_popup').is(':visible')){
-		if (typeof(cs_getCookie) !== 'undefined' && typeof(cs_getCookie) === 'function') { 
-			if ($('#basket-right h4').length){
-				subtotal = parseFloat($('#basket-right h4').text().replace(/[^\d.-]/g, ''));
-				$('.cart-item').each(function(index){
-					giftcardexists = ($(this).find('.cart-title').text().indexOf('Gift Card')>-1 ? index : giftcardexists);
-				})
-				if (giftcardexists>-1 && subtotal<1 && !cs_giftcardremoved){
-					cs_giftcardremoved = true;
-					$('.cart-item:eq('+giftcardexists+')').closest('tr').remove();
-					$.get('/cart/change?line='+(giftcardexists+1)+'&quantity=0');
-					//document.location = '/cart/change?line='+(giftcardexists+1)+'&quantity=0';
-				}
-			} else if ($('#cart_popup').is(':visible')){
-				$('#cart_popup .quick-cart-item').each(function(){
-					subtotal += parseFloat($(this).find('div:eq(4)').text().replace(/[^\d.-]/g, ''));
-					giftcardexists = ($(this).find('div:eq(1) a').text().indexOf('Gift Card')>-1 ? 0 : giftcardexists);
-				})
-			}
-			cs_setCookie("ju_cs_subtotal", subtotal,1, '/', '', ''); 
-			ju_options.targeting.subtotal=subtotal;
-			ju_options.personalized.shipping_threshold=(150-subtotal).toFixed(2);
-			if (subtotal>=1 && giftcardexists==-1 && !cs_giftcardadded){
-				cs_giftcardadded = true;
-				$.post('/cart/add.js',{"id":27977803977,"quantity":1});
-			}
-			//console.log(giftcardexists)
-		} 
-	}
-	subtotal = cs_getCookie("ju_cs_subtotal");
-	if (subtotal===undefined && subtotal!=''){
-		subtotal=0;
-	} else {
-		subtotal = parseFloat(subtotal);
-	}
-	ju_options.targeting.subtotal=subtotal;
-	ju_options.personalized.shipping_threshold=(150-subtotal).toFixed(2);
-}
-</script>-->
-<script type="text/javascript">
-  (function() {var s = document.createElement('script');s.type = 'text/javascript';s.async = true;
-  s.src = document.location.protocol + '//loader.wisepops.com/default/index/get-loader?user_id=23606';
-  var s2 = document.getElementsByTagName('script')[0];s2.parentNode.insertBefore(s, s2);})();
-</script>
-<script src="//www.codeblackbelt.com/js/modules/cool-image-magnifier/main.min.js?shop=the-gld-shop.myshopify.com"></script>
 <link href="https://limespot.azureedge.net/storefront/2.0.0/css/recommendations.min.css" rel="stylesheet" />
 {% include 'limespot-custom-css' %}
