--- a/snippets/preorder-me-widget.liquid
+++ b/snippets/preorder-me-widget.liquid
@@ -1,3 +1,3 @@
 {% if product %}
-  <script async data-seed="{{product | json | escape}}" id="preorder-me-widget" src="//easyshop.io/apps/preorder-me/widgets/the-gld-shop.js"></script>
+  <script async data-mf="{{product.metafields.preorderme.settings | escape}}" data-seed="{{product | json | escape}}" id="preorder-me-widget" src="//easyshop.io/apps/preorder-me/widgets/the-gld-shop.js"></script>
 {% endif %}
