--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -21,6 +21,11 @@
 
   <div id="product-loop" {% if settings.collection-sidebar %}class="desktop-10 tablet-5 mobile-3"{% endif %}>
     {% for product in collection.products %}
+    {%- assign hidden = false -%}
+    {%- for tag in product.tags -%}
+    {%- if tag == 'hidden' -%}{%- assign hidden = true -%}{%- endif -%}
+	{%- endfor -%}
+    {%- if hidden -%}{%- continue -%}{%- endif -%}
     <!-- Bold D&H //collection -->
 	{% if product.metafields.inventory.ShappifyHidden == "true" %}{% continue %}{% endif %}
 	<!-- //end collection D&H -->
